package org.example;

public enum TIPOCOLABORADOR {
    MEDICO,
    ENFERMERO,
    KINESIOLOGO
}
