@startuml
title Diagrama UML - Sistema de Gestión Hospitalaria

' Enumeración TIPOCOLABORADOR
enum TIPOCOLABORADOR {
  MEDICO
  ENFERMERO
  KINESIOLOGO
}

class Hospital {
  - nombre : String
  - direccion : String
  - areas : List<Area>
  + Hospital(nombre : String, direccion : String)
  + agregarArea(area : Area) : void
  + getNombre() : String
  + getAreas() : List<Area>
}

class Area {
  - nombre : String
  - piso : int
  - habitaciones : List<Habitacion>
  + Area(nombre : String, piso : int)
  + agregarHabitaciones(h : Habitacion) : void
  + getNombre() : String
  + getHabitaciones() : List<Habitacion>
}

class Habitacion {
  - numero : int
  - camasTotales : int
  - camasDisponibles : int
  - area : Area
  + Habitacion(numero : int, camasTotales : int, area : Area)
  + ocuparCama() : boolean
  + getCamasDisponibles() : int
  + getNumero() : int
  + getArea() : Area
  + setArea(area : Area) : void
}

class Paciente {
  - nombre : String
  - dni : int
  - diagnostico : String
  + Paciente(nombre : String, dni : int, diagnostico : String)
  + getNombre() : String
}

class Colaborador {
  - legajo : int
  - nombreCompleto : String
  - especialidad : String
  - tipo : TIPOCOLABORADOR
  + Colaborador(legajo : int, nombreCompleto : String, especialidad : String, tipo : TIPOCOLABORADOR)
  + getNombreCompleto() : String
  + getTipo() : TIPOCOLABORADOR
}

class Internacion {
  - habitacion : Habitacion
  - paciente : Paciente
  - colaborador : Colaborador
  + Internacion(h : Habitacion, p : Paciente, c : Colaborador)
  + getHabitacion() : Habitacion
  + getColaborador() : Colaborador
}

class Traslado {
  - paciente : Paciente
  - areaInicial : Area
  - areaFinal : Area
  + Traslado(paciente : Paciente, areaInicial : Area)
  + setAreaFinal(areaFinal : Area) : void
  + getAreaInicial() : Area
  + getAreaFinal() : Area
  + getPaciente() : Paciente
}

' Relaciones
Hospital "1" *-- "1..*" Area : contiene
Area "1" o-- "0..*" Habitacion : tiene
Habitacion "1" --> "1" Area : pertenece
Internacion --> Habitacion : usa
Internacion --> Paciente : atiende
Internacion --> Colaborador : esResponsable
Traslado --> Paciente : involucra
Traslado --> Area : areaInicial
Traslado --> Area : areaFinal
Colaborador --> TIPOCOLABORADOR
@enduml
